crates/mega-evm/tests/tracers/snapshots/tracers__harness__frame_budget_child_revert__call.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.call_frame(false)"
---
{
  "from": "0x0000000000000000000000000000000000400000",
  "gas": "0x1004f7",
  "gasUsed": "0xc29b",
  "to": "0x0000000000000000000000000000000000400002",
  "input": "0x",
  "calls": [
    {
      "from": "0x0000000000000000000000000000000000400002",
      "gas": "0xf1841",
      "gasUsed": "0x6be",
      "to": "0x0000000000000000000000000000000000400003",
      "input": "0x",
      "output": "0x84b90267000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000c4",
      "error": "execution reverted",
      "value": "0x0",
      "type": "CALL"
    }
  ],
  "value": "0x0",
  "type": "CALL"
}
